--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="pdfbox-app-2.0.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/yongd/OneDrive/Desktop/jar_files/boxable-1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
