fixed some dependency issue

--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="C:/Users/yongd/OneDrive/Desktop/jar_files/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
 	<classpathentry kind="lib" path="C:/Users/yongd/OneDrive/Desktop/jar_files/pdfbox-2.0.21.jar"/>
 	<classpathentry kind="lib" path="C:/Users/yongd/OneDrive/Desktop/jar_files/slf4j-api-1.7.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/yongd/OneDrive/Desktop/jar_files (1)/slf4j-nop-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
